# scintilla

./: .gitignore  LICENSE  README.md  build.sh  default.nix  nixpkgs  scintilla.cabal  scintilla.nix  shell.nix  stack.yaml
app/: Main.hs
gocd/: build.sh  cp-tests.sh
src/Scintilla/: Query.hs
src/Scintilla/Command/: Types.hs
src/Scintilla/Example/: Model.hs
src/Scintilla/Query/: Querying.hs  Types.hs
test/: Spec.hs
